--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "vuejs3",
-  "description": "SDF Todo list with vue cli and bootstrap.",
+  "name": "sdaf_todo_list",
+  "description": "SDAF Todo list with vue cli, bootstrap, ESLint, Travis & Apollo GraphQL.",
   "version": "1.0.0",
   "author": "Youri Seichter <yseichter@gmail.com>",
   "private": true,
@@ -8,14 +8,23 @@
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules",
     "test": "jest",
-    "lint": "./node_modules/.bin/eslint . ./**/*.vue"
+    "lint": "./node_modules/.bin/eslint . ./**/*.vue",
+    "backend": "node index.js"
   },
   "dependencies": {
+    "apollo-cache-inmemory": "^1.6.3",
+    "apollo-client": "^2.6.4",
+    "apollo-link": "^1.2.13",
+    "apollo-link-http": "^1.5.16",
+    "apollo-server": "^2.9.9",
     "bootstrap": "^4.0.0-beta.2",
     "bootstrap-vue": "^1.2.0",
+    "graphql": "^14.5.8",
+    "graphql-tag": "^2.10.1",
     "jest": "^24.9.0",
     "popper.js": "^1.12.9",
-    "vue": "^2.5.3"
+    "vue": "^2.5.3",
+    "vue-apollo": "^3.0.0"
   },
   "devDependencies": {
     "@vue/test-utils": "^1.0.0-beta.29",
