--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules",
     "test": "jest",
-    "lint": "./node_modules/.bin/eslint . ./**/*.vue",
-    "backend": "node index.js"
+    "lint": "./node_modules/.bin/eslint . ./**/*.vue"
   },
   "dependencies": {
     "apollo-cache-inmemory": "^1.6.3",
