--- a/webapp/package.json
+++ b/webapp/package.json
@@ -5,9 +5,9 @@
   "author": "Youri Seichter <yseichter@gmail.com>",
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
-    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules",
-    "test": "jest",
+    "dev": "./node_modules/.bin/cross-env NODE_ENV=development webpack-dev-server --open --hot",
+    "build": "./node_modules/.bin/cross-env NODE_ENV=production webpack --progress --hide-modules",
+    "test": "./node_modules/.bin/jest",
     "lint": "./node_modules/.bin/eslint . ./**/*.vue"
   },
   "dependencies": {
@@ -16,12 +16,15 @@
     "apollo-link": "^1.2.13",
     "apollo-link-http": "^1.5.16",
     "apollo-server": "^2.9.9",
+    "apollo-server-testing": "^2.9.9",
     "bootstrap": "^4.0.0-beta.2",
     "bootstrap-vue": "^1.2.0",
     "graphql": "^14.5.8",
     "graphql-tag": "^2.10.1",
     "jest": "^24.9.0",
     "popper.js": "^1.12.9",
+    "random-int": "^2.0.1",
+    "uuid": "^3.3.3",
     "vue": "^2.5.3",
     "vue-apollo": "^3.0.0"
   },
