--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
   "main": "start_backend.js",
   "scripts": {
     "test": "jest",
-    "dev": "node start_backend.js"
+    "dev": "node start_backend.js",
+    "lint": "./node_modules/.bin/eslint \"**/*.js\""
   },
   "author": "",
   "license": "ISC",
@@ -16,6 +17,7 @@
     "graphql-tag": "^2.10.1"
   },
   "devDependencies": {
+    "eslint": "^6.7.1",
     "jest": "^24.9.0",
     "vue-test-utils": "^1.0.0-beta.11"
   }
