--- a/backend/package.json
+++ b/backend/package.json
@@ -14,11 +14,11 @@
     "apollo-server": "^2.9.9",
     "apollo-server-express": "^2.9.9",
     "apollo-server-testing": "^2.9.9",
-    "graphql-tag": "^2.10.1"
+    "eslint": "^6.7.1",
+    "graphql-tag": "^2.10.1",
+    "jest": "^24.9.0"
   },
   "devDependencies": {
-    "eslint": "^6.7.1",
-    "jest": "^24.9.0",
     "vue-test-utils": "^1.0.0-beta.11"
   }
 }
