--- a/webapp/package.json
+++ b/webapp/package.json
@@ -8,7 +8,7 @@
     "dev": "./node_modules/.bin/cross-env NODE_ENV=development webpack-dev-server --open --hot",
     "build": "./node_modules/.bin/cross-env NODE_ENV=production webpack --progress --hide-modules",
     "test": "./node_modules/.bin/jest",
-    "lint": "./node_modules/.bin/eslint . ./**/*.vue"
+    "lint": "./node_modules/.bin/eslint . \"**/*.vue\""
   },
   "dependencies": {
     "apollo-cache-inmemory": "^1.6.3",
@@ -19,6 +19,9 @@
     "apollo-server-testing": "^2.9.9",
     "bootstrap": "^4.0.0-beta.2",
     "bootstrap-vue": "^1.2.0",
+    "eslint": "^6.6.0",
+    "eslint-plugin-jest": "^23.0.3",
+    "eslint-plugin-vue": "^5.2.3",
     "graphql": "^14.5.8",
     "graphql-tag": "^2.10.1",
     "jest": "^24.9.0",
@@ -34,11 +37,8 @@
     "babel-jest": "^24.9.0",
     "babel-loader": "^6.0.0",
     "babel-preset-env": "^1.6.1",
-    "cross-env": "^5.1.1",
+    "cross-env": "^6.0.3",
     "css-loader": "^0.28.7",
-    "eslint": "^6.6.0",
-    "eslint-plugin-jest": "^23.0.3",
-    "eslint-plugin-vue": "^5.2.3",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.5",
     "jsdom": "^15.2.1",
