--- a/webapp/dockerfile
+++ b/webapp/dockerfile
@@ -1,22 +1,9 @@
 FROM node:lts-alpine
-
-# install simple http server for serving static content
-RUN npm install -g http-server
-
-# make the 'app' folder the current working directory
+RUN yarn global add http-server
 WORKDIR /app
-
-# copy both 'package.json' and 'package-lock.json' (if available)
 COPY package*.json ./
-
-# install project dependencies
-RUN npm install
-
-# copy project files and folders to the current working directory (i.e. 'app' folder)
+RUN yarn install
 COPY . .
-
-# build app for production with minification
 RUN npm run build
-RUN cp index.html dist/index.html
 EXPOSE 8080
 CMD [ "http-server", "dist" ]
