--- a/webapp/package.json
+++ b/webapp/package.json
@@ -1,70 +1,34 @@
 {
-  "name": "sdaf_todo_list",
-  "description": "SDAF Todo list with vue cli, bootstrap, ESLint, Travis & Apollo GraphQL.",
-  "version": "1.0.0",
-  "author": "Youri Seichter <yseichter@gmail.com>",
+  "name": "test",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "./node_modules/.bin/cross-env NODE_ENV=development webpack-dev-server --open --hot",
-    "build": "./node_modules/.bin/cross-env NODE_ENV=production webpack --progress --hide-modules",
-    "test": "./node_modules/.bin/jest",
-    "lint": "./node_modules/.bin/eslint . ./**/*.vue"
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "apollo-cache-inmemory": "^1.6.3",
     "apollo-client": "^2.6.4",
-    "apollo-link": "^1.2.13",
     "apollo-link-http": "^1.5.16",
-    "apollo-server": "^2.9.9",
-    "apollo-server-testing": "^2.9.9",
-    "bootstrap": "^4.0.0-beta.2",
-    "bootstrap-vue": "^1.2.0",
+    "bootstrap-vue": "^2.1.0",
+    "core-js": "^3.4.3",
     "graphql": "^14.5.8",
     "graphql-tag": "^2.10.1",
-    "http-server": "^0.12.0",
     "jest": "^24.9.0",
-    "popper.js": "^1.12.9",
-    "random-int": "^2.0.1",
-    "uuid": "^3.3.3",
-    "vue": "^2.5.3",
-    "vue-apollo": "^3.0.0"
+    "vue": "^2.6.10",
+    "vue-apollo": "^3.0.1"
   },
   "devDependencies": {
-    "@vue/test-utils": "^1.0.0-beta.29",
-    "babel-core": "^6.26.0",
-    "babel-jest": "^24.9.0",
-    "babel-loader": "^6.0.0",
-    "babel-preset-env": "^1.6.1",
-    "cross-env": "^5.1.1",
-    "css-loader": "^0.28.7",
-    "eslint": "^6.6.0",
-    "eslint-plugin-jest": "^23.0.3",
-    "eslint-plugin-vue": "^5.2.3",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "^1.1.5",
-    "jsdom": "^15.2.1",
-    "jsdom-global": "^3.0.2",
-    "style-loader": "^0.19.0",
-    "vue-jest": "^3.0.5",
-    "vue-loader": "^13.5.0",
-    "vue-template-compiler": "^2.5.3",
-    "webpack": "^3.8.1",
-    "webpack-dev-server": "^2.9.4"
-  },
-  "jest": {
-    "moduleFileExtensions": [
-      "js",
-      "vue"
-    ],
-    "moduleNameMapper": {
-      "^@/(.*)$": "<rootDir>/src/$1"
-    },
-    "transform": {
-      "^.+\\.js$": "<rootDir>/node_modules/babel-jest",
-      ".*\\.(vue)$": "<rootDir>/node_modules/vue-jest"
-    },
-    "transformIgnorePatterns": [
-      "<rootDir>/node_modules/"
-    ]
+    "@vue/cli-plugin-babel": "^4.1.0",
+    "@vue/cli-plugin-eslint": "^4.1.0",
+    "@vue/cli-service": "^4.1.0",
+    "@vue/eslint-config-prettier": "^5.0.0",
+    "babel-eslint": "^10.0.3",
+    "eslint": "^5.16.0",
+    "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-vue": "^5.0.0",
+    "prettier": "^1.19.1",
+    "vue-template-compiler": "^2.6.10"
   }
 }
