--- a/backend/package.json
+++ b/backend/package.json
@@ -15,8 +15,11 @@
     "apollo-server-express": "^2.9.9",
     "apollo-server-testing": "^2.9.9",
     "eslint": "^6.7.1",
+    "graphql-middleware": "^4.0.2",
+    "graphql-shield": "^7.0.4",
     "graphql-tag": "^2.10.1",
-    "jest": "^24.9.0"
+    "jest": "^24.9.0",
+    "jsonwebtoken": "^8.5.1"
   },
   "devDependencies": {
     "vue-test-utils": "^1.0.0-beta.11"
