--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server": "^2.9.9",
+    "apollo-server-errors": "^2.3.4",
     "apollo-server-express": "^2.9.9",
     "apollo-server-testing": "^2.9.9",
     "eslint": "^6.7.1",
