--- a/webapp/package.json
+++ b/webapp/package.json
@@ -11,6 +11,9 @@
     "lint": "./node_modules/.bin/eslint . \"**/*.vue\""
   },
   "dependencies": {
+    "@babel/cli": "^7.7.4",
+    "@babel/core": "^7.7.4",
+    "@babel/preset-env": "^7.7.4",
     "apollo-cache-inmemory": "^1.6.3",
     "apollo-client": "^2.6.4",
     "apollo-link": "^1.2.13",
@@ -25,6 +28,7 @@
     "graphql": "^14.5.8",
     "graphql-tag": "^2.10.1",
     "jest": "^24.9.0",
+    "mock-apollo-client": "^0.2.0",
     "popper.js": "^1.12.9",
     "random-int": "^2.0.1",
     "uuid": "^3.3.3",
@@ -33,7 +37,7 @@
   },
   "devDependencies": {
     "@vue/test-utils": "^1.0.0-beta.29",
-    "babel-core": "^6.26.0",
+    "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^24.9.0",
     "babel-loader": "^6.0.0",
     "babel-preset-env": "^1.6.1",
