--- a/webapp/package.json
+++ b/webapp/package.json
@@ -27,6 +27,7 @@
     "eslint-plugin-vue": "^5.2.3",
     "graphql": "^14.5.8",
     "graphql-tag": "^2.10.1",
+    "graphql-tools": "^4.0.6",
     "jest": "^24.9.0",
     "mock-apollo-client": "^0.2.0",
     "popper.js": "^1.12.9",
