--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,11 @@ node_js:
 
 script:
     - cd webapp
+    - yar install
     - yarn run build
     - yarn run lint
     - yarn test
     - cd ../backend
+    - yarn install
     - yarn run lint
     - yarn test
