let's give it another try

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,5 @@ script:
     - yarn --cwd ./webapp run build
     - yarn --cwd ./webapp run lint
     - yarn --cwd ./webapp run test
-    - yarn --cwd ./webapp install
-    - yarn --cwd ./webapp run lint
-    - yarn --cwd ./webapp test
+    - yarn --cwd ./backend run lint
+    - yarn --cwd ./backend test
