--- a/webapp/package.json
+++ b/webapp/package.json
@@ -17,6 +17,7 @@
     "apollo-cache-inmemory": "^1.6.3",
     "apollo-client": "^2.6.4",
     "apollo-link": "^1.2.13",
+    "apollo-link-context": "^1.0.19",
     "apollo-link-http": "^1.5.16",
     "apollo-server": "^2.9.9",
     "apollo-server-testing": "^2.9.9",
@@ -33,8 +34,9 @@
     "popper.js": "^1.12.9",
     "random-int": "^2.0.1",
     "uuid": "^3.3.3",
-    "vue": "^2.5.3",
-    "vue-apollo": "^3.0.0"
+    "vue": "2.6.6",
+    "vue-apollo": "^3.0.0",
+    "vue-server-renderer": "2.6.6"
   },
   "devDependencies": {
     "@vue/test-utils": "^1.0.0-beta.29",
@@ -51,7 +53,7 @@
     "style-loader": "^0.19.0",
     "vue-jest": "^3.0.5",
     "vue-loader": "^13.5.0",
-    "vue-template-compiler": "^2.5.3",
+    "vue-template-compiler": "2.6.6",
     "webpack": "^3.8.1",
     "webpack-dev-server": "^2.9.4"
   },
