--- a/backend/package.json
+++ b/backend/package.json
@@ -23,7 +23,8 @@
     "graphql-shield": "^7.0.4",
     "graphql-tag": "^2.10.1",
     "jest": "^24.9.0",
-    "jsonwebtoken": "^8.5.1"
+    "jsonwebtoken": "^8.5.1",
+    "neo4j-driver": "^4.0.0"
   },
   "devDependencies": {
     "vue-test-utils": "^1.0.0-beta.11"
