add updateTodo ✅ with MERGE

--- a/backend/.env
+++ b/backend/.env
@@ -3,3 +3,6 @@ NEO4J_PASSWORD=wordpass
 NEO4J_URI=bolt://localhost:7687
 
 JWT_SECRET=secret secret
+
+ADMIN_EMAIL=admin@aol.com
+ADMIN_PASSWORD=admin123
