--- a/backend/.eslintrc.yml
+++ b/backend/.eslintrc.yml
@@ -3,7 +3,8 @@ env:
   commonjs: true
   es6: true
   jest: true
-extends: 'eslint:recommended'
+  node: true
+#extends: 'eslint:recommended'
 globals:
   Atomics: readonly
   SharedArrayBuffer: readonly
