try out services solution

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ node_js:
     - "stable"
 
 services:
-    - docker
+    - neo4j
 
 before_install:
     - curl -v POST http://neo4j:neo4j@localhost:7474/user/neo4j/password -d"password=wordpass2"
