--- a/.travis.yml
+++ b/.travis.yml
@@ -4,17 +4,17 @@ node_js:
     - "stable"
 
 services:
-    - neo4j
-
-before_install:
-    - curl -v POST http://neo4j:neo4j@localhost:7474/user/neo4j/password -d"password=wordpass2"
-    - curl -v POST http://neo4j:wordpass2@localhost:7474/user/neo4j/password -d"password=wordpass"
+    - docker
 
 # credit to aradar / NoraAnlima for config inspiration
 install:
     - yarn --cwd ./webapp install
     - yarn --cwd ./backend install
-
+    - mkdir data
+    - mkdir logs
+    - docker build ./backend/neo4j/ -t sdaf_neo4j
+    - docker run -p 7474:7474 -p 7687:7687 --volume=./data:/data --volume=./logs:/logs --env=NEO4J_dbms_memory_pagecache_size=4G --env NEO4J_AUTH=neo4j/wordpass -d --name sdaf_neo4j sdaf_neo4j
+    #- curl -v POST bolt://neo4j:neo4j@localhost:7687/user/neo4j/password -d"password=wordpass"
 script:
     - node ./backend/helper/seed_db.js
     - yarn --cwd ./webapp run build
