--- a/.travis.yml
+++ b/.travis.yml
@@ -20,9 +20,8 @@ install:
     - mkdir logs
     - docker build ./backend/neo4j/ -t sdaf_neo4j
     - docker run -p 7474:7474 -p 7687:7687 --volume=$HOME/data:/data --volume=$HOME/logs:/logs --env=NEO4J_dbms_memory_pagecache_size=4G --env NEO4J_AUTH=neo4j/wordpass -d --name sdaf_neo4j sdaf_neo4j
-    #- curl -v POST bolt://neo4j:neo4j@localhost:7687/user/neo4j/password -d"password=wordpass"
+    - yarn --cwd ./backend run db:seed
 script:
-    - node ./backend/helper/seed_db.js
     - yarn --cwd ./webapp run build
     - yarn --cwd ./webapp run lint
     - yarn --cwd ./webapp run test
