--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,7 @@ services:
     - docker
 
 env:
-    - NEO4J_USER=neo4j
-    - NEO4J_PASSWORD=wordpass
-    - NEO4J_URI=bolt://localhost:7687
+    - NEO4J_USER=neo4j NEO4J_PASSWORD=wordpass NEO4J_URI=bolt://localhost:7687
 
 
 # credit to aradar / NoraAnlima for config inspiration
