sleep between db container creation and seeding

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,6 @@ services:
 env:
     - NEO4J_USER=neo4j NEO4J_PASSWORD=wordpass NEO4J_URI=bolt://localhost:7687 TESTUSER_NAME=testuser TESTUSER_EMAIL=testuser@aol.com TESTUSER_PASSWORD=test123
 
-
-
 # credit to aradar / NoraAnlima for config inspiration
 install:
     - yarn --cwd ./webapp install
@@ -19,6 +17,7 @@ install:
     - mkdir logs
     - docker build ./backend/neo4j/ -t sdaf_neo4j
     - docker run -p 7474:7474 -p 7687:7687 --volume=$HOME/data:/data --volume=$HOME/logs:/logs --env=NEO4J_dbms_memory_pagecache_size=4G --env NEO4J_AUTH=neo4j/wordpass -d --name sdaf_neo4j sdaf_neo4j
+    - sleep 15
     - yarn --cwd ./backend run db:seed
 script:
     - yarn --cwd ./webapp run build
