--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "start_backend.js",
   "scripts": {
-    "test": "jest",
+    "test": "jest --forceExit",
     "dev": "node start_backend.js",
     "lint": "./node_modules/.bin/eslint \"**/*.js\"",
     "db:seed": "node ./helper/seed_db.js"
