--- a/webapp/package.json
+++ b/webapp/package.json
@@ -22,8 +22,10 @@
     "apollo-server": "^2.9.9",
     "apollo-server-testing": "^2.9.9",
     "babel-eslint": "^10.0.3",
+    "babel-polyfill": "^6.26.0",
     "bootstrap": "^4.0.0-beta.2",
     "bootstrap-vue": "^1.2.0",
+    "dotenv": "^8.2.0",
     "eslint": "^6.6.0",
     "eslint-plugin-jest": "^23.0.3",
     "eslint-plugin-vue": "^5.2.3",
