--- a/webapp/.eslintrc.yml
+++ b/webapp/.eslintrc.yml
@@ -2,6 +2,8 @@ env:
   browser: true
   es6: true
   jest: true
+  amd: true
+  node: true
 extends:
   - 'eslint:recommended'
   - 'plugin:vue/essential'
@@ -13,4 +15,6 @@ parserOptions:
   sourceType: module
 plugins:
   - vue
-rules: {}
+rules: {
+  "require-atomic-updates": "off"
+}
