change lint settings

--- a/webapp/.eslintrc.yml
+++ b/webapp/.eslintrc.yml
@@ -10,11 +10,13 @@ extends:
 globals:
   Atomics: readonly
   SharedArrayBuffer: readonly
+parser: 'babel-eslint'
 parserOptions:
   ecmaVersion: 2018
   sourceType: module
+  allowImportExportEverywhere: true
 plugins:
   - vue
 rules: {
-  "require-atomic-updates": "off"
+  require-atomic-updates: 'off'
 }
