made code improvements based on suggestions from code reviews

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ install:
     - mkdir logs
     - docker build ./backend/neo4j/ -t sdaf_neo4j
     - docker run -p 7474:7474 -p 7687:7687 --volume=$HOME/data:/data --volume=$HOME/logs:/logs --env=NEO4J_dbms_memory_pagecache_size=4G --env NEO4J_AUTH=neo4j/wordpass -d --name sdaf_neo4j sdaf_neo4j
-    - sleep 15
+    - wait-on tcp:7474
     - yarn --cwd ./backend run db:seed
 
 script:
