--- a/backend/package.json
+++ b/backend/package.json
@@ -25,7 +25,8 @@
     "graphql-tag": "^2.10.1",
     "jest": "^24.9.0",
     "jsonwebtoken": "^8.5.1",
-    "neo4j-driver": "^4.0.0"
+    "neo4j-driver": "^4.0.0",
+    "wait-on": "^3.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.7.4",
