--- a/webapp/package.json
+++ b/webapp/package.json
@@ -37,7 +37,8 @@
     "uuid": "^3.3.3",
     "vue": "2.6.6",
     "vue-apollo": "^3.0.0",
-    "vue-server-renderer": "2.6.6"
+    "vue-server-renderer": "2.6.6",
+    "wait-on": "^3.3.0"
   },
   "devDependencies": {
     "@vue/test-utils": "^1.0.0-beta.29",
