--- a/backend/package.json
+++ b/backend/package.json
@@ -26,7 +26,8 @@
     "graphql-tag": "^2.10.1",
     "jest": "^24.9.0",
     "jsonwebtoken": "^8.5.1",
-    "neo4j-driver": "^4.0.0"
+    "neo4j-driver": "^4.0.0",
+    "regenerator-runtime": "^0.13.3"
   },
   "devDependencies": {
     "@babel/core": "^7.7.7",
